# pycemrg-image-analysis

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/: index.html
api/augmentation/: index.html
api/components/: index.html
api/io/: index.html
api/label_tools/: index.html
api/metrics/: index.html
api/overview/: index.html
api/recipes/: index.html
api/spatial/: index.html
cli/labels/: index.html
docs/: API_reference.md  components_api.md  index.md  label_tools_api.md  labels_cli_readme.md  segmentation_model_api.md  spatial_api.md
docs/api/: augmentation.md  index.md  io.md  metrics.md  overview.md  recipes.md  spatial.md
docs/getting-started/: index.md
docs/guides/: add_myocardium_component.md  authoring_a_recipe.md
docs/tutorials/: custom_heartbuilder.md
examples/: label_remapping_workflow.py  orchestrator_patterns.py
getting-started/: index.html
guides/add_myocardium_component/: index.html
guides/authoring_a_recipe/: index.html
scripts/inspection/: inspect_dicom_phase.py  inspect_spatial_coordinates_logic.py
scripts/utilities/: inr_to_nifti.py  labels_cli.py
search/: search_index.json
src/pycemrg_image_analysis/: __init__.py  cli.py  recipes.py  scaffolding.py
tests/: conftest.py
tests/integration/: test_create_cylinders.py  test_myocardium.py  test_myocardium_no_cuts.py  test_myocardium_steps.py  test_ring_creation.py  test_valve_creation.py
tests/unit/: test_artifact_simulation.py  test_augmentation.py  test_components.py  (+7 more)
(+31 files in other folders)
